--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
 :root {
-  font-family: serif;
+  font-family: 'Inter', sans-serif;
 }
 
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: serif;
+    font-family: 'Inter var', sans-serif;
   }
 }
 
