--- a/templates/head.html
+++ b/templates/head.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=0.75" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <link rel="stylesheet" href="static/style.css" type="text/css" />
