--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@
 
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: 'Inter var', sans-serif;
+    font-family: 'Inter', sans-serif;
   }
 }
 
