--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <header>
   <a href="index.html"
-    ><img src="static/site/face.webp" alt="SpaceMan" height="80"
+    ><img src="static/site/face2.webp" alt="SpaceMan" height="80"
   /></a>
 </header>
 <nav>{{ if .Nav.Parent }} {{ if lt ( len .Nav.Parent ) 7 }}
