--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,6 @@
 <header>
   <a href="index.html"
-    ><img src="static/site/face1.png" alt="SpaceMan" height="80"
-  /></a>
+    ><img src="static/site/face1.png" alt="SpaceMan" height="80" width="100"/></a>
 </header>
 <nav>{{ if .Nav.Parent }} {{ if lt ( len .Nav.Parent ) 7 }}
 	<ul>
