--- a/static/style.css
+++ b/static/style.css
@@ -35,10 +35,12 @@ table th {
   vertical-align: top;
   padding: 2.5px 5px;
   text-align: left;
+  border: 1px solid
 }
 
 table td>pre,
 table th>pre {
+  border: 1px solid
   background: none;
   padding: 0;
   margin: 0;
