--- a/static/style.css
+++ b/static/style.css
@@ -148,8 +148,8 @@ main q {
 main img,
 main svg {
   max-width: 100%;
-  display: block;
-  margin: 0 0 15px;
+  display: inline-block;
+  margin: 0 0 25px;
 }
 
 main pre {
