--- a/static/style.css
+++ b/static/style.css
@@ -82,8 +82,8 @@ main {
 
 main figure:first-child img {
   margin-left: -30px;
-  max-width: calc(100vw - 15px);
-  width: 900px;
+  max-width: 100vw;
+  width: 800px;
 }
 
 main figure>* {
