--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <section class="footer">
   <a href="https://www.github.com/stardoom4/lyceum">
-    <img alt="git" src="static/site/git.svg" width="35" />
+    <img alt="git" src="static/site/github-logo.webp" width="35" />
   </a>
   <span>Public Domain.</span>
 </section>
