--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,9 @@
 <section class="footer">
+  <a hre="ideal-society.html">
+    <img src="static/site/ashok-chakra.webp" alt="society">
+  </a>
   <a href="https://www.github.com/stardoom4/lyceum">
     <img alt="git" src="static/site/github-logo.webp" width="35" />
   </a>
-  <span>Public Domain.</span>
+  <span>Public Domain</span>
 </section>
