--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <section class="footer">
-  <a hre="ideal-society.html">
+  <a href="ideal-society.html">
     <img src="static/site/ashok-chakra.webp" alt="society">
   </a>
   <a href="https://www.github.com/stardoom4/lyceum">
