--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{{ site_name }}</title>
+<title>Wunder</title>
 <link rel="alternate" type="application/atom+xml" title="garud.netlify.app - Wunder - atom feed" href="https://garud.netlify.app/atom.xml"/>
 <style>
 * { background: #080c0c; }
