--- a/templates/main.html
+++ b/templates/main.html
@@ -62,7 +62,7 @@ p {
 }
 </style>
 <main>
-<h1>{{ site_name }}</h1>
+<h1>Wunder</h1>
 <p><a href="https://garud.netlify.app">Home</a> &middot; <a href="/atom.xml">Atom Feed</a></p>
 
 <div class="intro">
