--- a/templates/head.html
+++ b/templates/head.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Wunder-German word for Miracle. This a personal Memex.">
 <link rel="stylesheet" href="static/style.css" type="text/css" />
 
