--- a/templates/head.html
+++ b/templates/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Wunder-German word for Miracle. This a personal Memex.">
+<meta name="description" content="It all returns to nothing!">
 <link rel="stylesheet" href="static/style.css" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
