--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,5 +2,5 @@
   <a href="https://www.github.com/stardoom4/lyceum">
     <img alt="git" src="static/site/github-logo.webp" width="35" />
   </a>
-  <span>Public Domain</span>
+  <span><q><strong>Ayanami..</strong></q></span>
 </section>
