--- a/templates/head.html
+++ b/templates/head.html
@@ -1,10 +1,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="It all returns to nothing!">
-<link rel="newest stylesheet" href="static/style.css" type="text/css" />
+<link rel="stylesheet" href="static/style.css" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="static/files/lib/theme.js"></script>
-<link rel="old stylesheet" type="text/css" href="static/files/theme.css"/>
+<link rel="stylesheet" type="text/css" href="static/files/theme.css"/>
 <script>
 $(document).ready(function(){
   $("#myInput").on("keyup", function() {
