--- a/static/files/theme.css
+++ b/static/files/theme.css
@@ -1,13 +1,13 @@
-body { background:var(--background) !important; }
-#picker { background-color:var(--b_inv) !important; color:var(--f_inv) !important; }
-#picker:before { color:var(--f_med) !important; }
-#picker input::placeholder { color:var(--f_med) !important; }
-.fh { color:var(--f_high) !important; stroke:var(--f_high) !important; }
-.fm { color:var(--f_med) !important; stroke:var(--f_med) !important; }
-.fl { color:var(--f_low) !important; stroke:var(--f_low) !important; }
-.f_inv { color:var(--f_inv) !important; stroke:var(--f_inv) !important; }
-.bh { background:var(--b_high) !important; }
-.bm { background:var(--b_med) !important; }
-.bl { background:var(--b_low) !important; }
-.b_inv { background:var(--b_inv) !important; }
-.icon { color:var(--f_high) !important; stroke:var(--f_high) !important; }
+body { background:var(--background); }
+#picker { background-color:var(--b_inv) ; color:var(--f_inv); }
+#picker:before { color:var(--f_med); }
+#picker input::placeholder { color:var(--f_med; }
+.fh { color:var(--f_high); stroke:var(--f_high); }
+.fm { color:var(--f_med); stroke:var(--f_med); }
+.fl { color:var(--f_low); stroke:var(--f_low); }
+.f_inv { color:var(--f_inv); stroke:var(--f_inv); }
+.bh { background:var(--b_high); }
+.bm { background:var(--b_med); }
+.bl { background:var(--b_low); }
+.b_inv { background:var(--b_inv); }
+.icon { color:var(--f_high); stroke:var(--f_high); }
