--- a/templates/head.html
+++ b/templates/head.html
@@ -3,6 +3,6 @@
 <meta name="description" content="It all returns to nothing!">
 <script type="text/javascript" src="static/files/lib/theme.js"></script>
 <link rel="stylesheet" href="static/style.css" type="text/css" />
-<link rel="stylesheet" type="text/css" href="static/files/theme.css"/>
+<link rel="stylesheet" href="static/files/theme.css"/>
 
 
