--- a/templates/default.html
+++ b/templates/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {{ template "head.html" . }}
+    <title>{{ index .Meta "title" }}</title>
   </head>
   <title>{{ index .Meta "title" }}</title>
   <body>
