--- a/static/style.css
+++ b/static/style.css
@@ -225,3 +225,89 @@ main>ul li {
 input[type=text] {
   font-color: #000 !important;
 }
+.cont{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 auto;
+    box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
+    border-radius: 50%;
+    background-color: #fff;
+}
+.hours{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translateY(-50%) rotate(0deg);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    border-radius: 50%;
+    transition: 0.5s all;
+    background-color: #000;
+}
+.hours:after{
+    content: "";
+    width: 4px;
+    height: 16px;
+    background: #fff;
+    position: absolute;
+    top: -16px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+.minutes{
+    width: 282px;
+    height: 282px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translateY(-50%) rotate(0deg);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 50%;
+    transition: 0.5s all;
+    background-color: #fff;
+}
+.minutes:after{
+    content: "";
+    width: 4px;
+    height: 32px;
+    background: #fff;
+    position: absolute;
+    top: -12px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+.seconds{
+    width: 264px;
+    height: 264px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translateY(-50%) rotate(0deg);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 50%;
+    transition: 0.5s all;
+}
+.seconds:after{
+    content: "";
+    width: 4px;
+    height: 16px;
+    background: #000;
+    position: absolute;
+    top: -8px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
