--- a/templates/head.html
+++ b/templates/head.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="It all returns to nothing!">
 <script type="text/javascript" src="static/files/lib/theme.js"></script>
+<script type="text/javascript" src="static/files/lib/script.js"></script>
 <link rel="stylesheet" href="static/style.css" type="text/css" />
 <link rel="stylesheet" href="static/files/theme.css"/>
 
