--- a/static/style.css
+++ b/static/style.css
@@ -228,11 +228,11 @@ input[type=text] {
 .cont{
     width: 300px;
     height: 300px;
-    position: absolute;
+    position: inherit;
     left: 0;
     right: 0;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(2%);
     margin: 0 auto;
     box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
     border-radius: 50%;
