--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,6 @@
   <a href="https://www.github.com/stardoom4/lyceum">
       <div class="heading">
     <img alt="git" src="static/site/github-logo.webp" width="35" />
-        <h2>Faraz<sup>™</sup></h2>
   </a>
       </div>
-  <q>Ayanami..</q>
+ <q>Anywhere Can Be A Paradise As Long As You Have The Will To Live. — Yui Ikari</q>
