--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 :root {
   font-family: serif;
-  background-color: black !important;
+  background-color: var(--background);
 }
 
 @supports (font-variation-settings: normal) {
@@ -14,7 +14,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  color: #ffffff;
+  color: #fff;
 }
 
 body {
@@ -96,6 +96,8 @@ main figure figcaption {
 
 main h2 {
   max-width: 400px;
+  font-style: italic;
+  color: var(--f_high);
 }
 
 main h4 {
@@ -125,8 +127,8 @@ main a {
 
 main a:hover,
 ::selection {
-  background-color: #fff !important;
-  color: #000 !important;
+  background-color: var(--b_high);
+  color:var(--f_high);
   text-decoration: none;
 }
 
