--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,5 +4,9 @@
       <div class="heading">
     <img alt="git" src="static/site/github-logo.webp" width="35" />
   </a>
+  <a href="https://wunder.pages.dev/wunder">
+      <div class="heading">
+    <img alt="git" src="static/site/github-logo.webp" width="35" />
+  </a>
       </div>
- <q>Anywhere Can Be A Paradise As Long As You Have The Will To Live. — Yui Ikari</q>
+ <q>Acts of Man are better than acts of God</q>
