--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
   </a>
   <a href="https://wunder.pages.dev/wunder">
       <div class="heading">
-    <img alt="git" src="static/site/github-logo.webp" width="35" />
+    <img alt="git" src="static/site/Trigon.jpg" width="35" />
   </a>
       </div>
  <q>Acts of Man are better than acts of God</q>
