--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <header>
   <a href="index.html"
-    ><img src="static/site/logo.webp" alt="SpaceMan" height="100" width="100"/></a>
+    ><img src="static/site/Trigon.jpg" alt="SpaceMan" height="100" width="100"/></a>
 </header>
 <nav>{{ if .Nav.Parent }} {{ if lt ( len .Nav.Parent ) 7 }}
 	<ul>
