--- a/templates/default.html
+++ b/templates/default.html
@@ -8,6 +8,22 @@
   <body>
     {{ template "nav.html" . }}
     <main>{{ .Body }}</main>
+    <div class="music-capsule" id="musicCapsule">
+      <span class="button-label" id="buttonLabel">Music</span>
+        <!-- Display the current track title (Initially hidden) -->
+        <div class="music-title" id="musicTitle">Loading...</div>
+
+        <!-- YouTube player hidden -->
+        <div id="player"></div>
+
+        <!-- Playback controls (Initially hidden) -->
+        <div class="controls" id="controls">
+            <button id="prevButton">Prev</button>
+            <button id="playButton">Play</button>
+            <button id="pauseButton">Pause</button>
+            <button id="nextButton">Next</button>
+        </div>
+    </div>
     <footer>{{ template "footer.html" }}</footer>
     <script>
 const theme = new Theme();
