--- a/templates/default.html
+++ b/templates/default.html
@@ -25,6 +25,7 @@
         </div>
     </div>
     <footer>{{ template "footer.html" }}</footer>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script>
 const theme = new Theme();
 theme.install(document.body);
