--- a/static/style.css
+++ b/static/style.css
@@ -1,193 +1,99 @@
-            :root {
-                --header-image: url('https://sadhost.neocities.org/images/layouts/wp.jpeg');
-                --body-bg-image: url('https://sadhost.neocities.org/images/tiles/purplesky.gif');
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
 
-                /* colors */
-                --content: #43256E;
+        .navbar {
+            background-color: #f8f9fa;
+            padding: 1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .logo {
+            max-width: 100px;
+            height: auto;
+        }
+
+        .header-image {
+            width: 100%;
+            height: 300px;
+            background-image: url('https://picsum.photos/1200/300');
+            background-size: cover;
+            background-position: center;
+        }
+
+        .content {
+            display: flex;
+            flex: 1;
+        }
+
+        .sidebar {
+            background-color: #e9ecef;
+            padding: 1rem;
+            width: 250px;
+        }
+
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .sidebar ul li {
+            margin-bottom: 0.5rem;
+        }
+
+        .sidebar a {
+            color: #007bff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .sidebar a:hover {
+            color: #0056b3;
+            text-decoration: underline;
+        }
+
+        .main {
+            flex: 1;
+            padding: 1rem;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
+
+        @media (max-width: 768px) {
+            .content {
+                flex-direction: column;
             }
 
-            body {
-                font-family: Sans-Serif;
-                margin: 0;
-                background-color: #000;
-                color: #fff;
+            .sidebar {
+                width: auto;
+                order: -1;
             }
 
-            * {
-                box-sizing: border-box;
+            .header-image {
+                height: 200px;
             }
 
-            /* below this line is CSS for the layout */
-
-            /* this is a CSS comment
-    to uncomment a line of CSS, remove the * and the /
-    before and after the text */
-
-
-            /* the "container" is what wraps your entire website */
-            /* if you want something (like the header) to be Wider than
-    the other elements, you will need to move that div outside
-    of the container */
-            #container {
-                max-width: 100%;
-                /* this is the width of your layout! */
-                /* if you change the above value, scroll to the bottom
-      and change the media query according to the comment! */
-                margin: 0 auto;
-                /* this centers the entire page */
+            .navbar {
+                padding: 0.5rem;
             }
 
-            /* the area below is for all links on your page
-    EXCEPT for the navigation */
-            #container a {
-                color: #fff;
-                font-weight: bold;
-                /* if you want to remove the underline
-      you can add a line below here that says:
-      text-decoration:none; */
+            .logo {
+                max-width: 80px;
             }
 
-            #header {
-                width: 100%;
-                background-color: #000;
-                /* header color here! */
-                height: 150px;
-                /* this is only for a background image! */
-                /* if you want to put images IN the header, 
-      you can add them directly to the <div id="header"></div> element! */
-                background-image: var(--header-image);
-                background-size: 100%;
+            .sidebar, .main {
+                padding: 0.5rem;
             }
-
-            /* navigation section!! */
-            #navbar {
-                height: 40px;
-                background-color: #fff;
-                /* navbar color */
-                width: 100%;
-            }
-
-            #navbar ul {
-                display: flex;
-                padding: 0;
-                margin: 0;
-                list-style-type: none;
-                justify-content: space-evenly;
-            }
-
-            #navbar li {
-                padding-top: 10px;
-            }
-
-            /* navigation links*/
-            #navbar li a {
-                color: #000;
-                /* navbar text color */
-                font-weight: 800;
-                text-decoration: none;
-                /* this removes the underline */
-            }
-
-            /* navigation link when a link is hovered over */
-            #navbar li a:hover {
-                color: #a49cba;
-                text-decoration: underline;
-            }
-
-            #flex {
-                display: flex;
-            }
-
-            /* this colors BOTH sidebars
-    if you want to style them separately,
-    create styles for #leftSidebar and #rightSidebar */
-            aside {
-                background-color: #000;
-                width: 340px;
-                padding: 20px;
-                font-size: 18px;
-                /* this makes the sidebar text slightly smaller */
-            }
-
-
-            /* this is the color of the main content area,
-    between the sidebars! */
-            main {
-                background-color: #000;
-                flex: 1;
-                padding: 20px;
-                order: 2;
-                font-size: 18px;
-            }
-
-            /* what's this "order" stuff about??
-    allow me to explain!
-    if you're using both sidebars, the "order" value
-    tells the CSS the order in which to display them.
-    left sidebar is 1, content is 2, and right sidebar is 3! */
-
-            */ #leftSidebar {
-                order: 1;
-            }
-
-            footer {
-                background-color: #fff;
-                /* background color for footer */
-                width: 100%;
-                height: 60px;
-                padding: 20px;
-                text-align: center;
-                color: #000;
-                /* this centers the footer text */
-            }
-
-            h1,
-            h2,
-            h3 {
-                color: #fff;
-            }
-
-            h1 {
-                font-size: 25px;
-            }
-
-            strong {
-                /* this styles bold text */
-                color: #fff;
-            }
-
-            /* this is just a cool box, it's the darker colored one */
-            .box {
-                background-color: #fff;
-                border: 1px solid #000;
-                color: #000;
-                padding: 10px;
-            }
-
-
-            @media only screen and (max-width: 800px) {
-                #flex {
-                    flex-wrap: wrap;
-                }
-
-                aside {
-                    width: 100%;
-                }
-
-                /* the order of the items is adjusted here for responsiveness!
-      since the sidebars would be too small on a mobile device.
-      feel free to play around with the order!
-      */
-                main {
-                    order: 2;
-                }
-
-                #leftSidebar {
-                    order: 1;
-                }
-
-
-                #navbar ul {
-                    flex-wrap: wrap;
-                }
-            }
+        }
