--- a/templates/default.html
+++ b/templates/default.html
@@ -6,10 +6,11 @@
   </head>
   <body>
  <nav class="navbar">
-        <img src="https://via.placeholder.com/100x50?text=Logo" alt="Logo" class="logo">
+  <a href="index.html"
+    ><img src="static/site/Trigon.jpg" alt="SpaceMan" height="60" width="60"/ alt="Logo" class="logo"></a>
     </nav>
 
-    <header class="header-image" role="img" aria-label="Decorative header image"></header>
+    <header class="header-image" role="img" aria-label="Wunder"></header>
 
     <div class="content">
         <aside class="sidebar">
