--- a/static/style.css
+++ b/static/style.css
@@ -71,6 +71,11 @@
             padding: 1rem;
         }
 
+       img {
+           width: 100%;
+           height: auto;
+       }
+
         @media (max-width: 768px) {
             .content {
                 flex-direction: column;
