--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@
 
         .header-image {
             width: 100%;
-            height: 300px;
+            height: 320px;
             background-image: url('https://picsum.photos/1200/300');
             background-size: cover;
             background-position: center;
@@ -101,4 +101,9 @@
             .sidebar, .main {
                 padding: 0.5rem;
             }
+            img {
+                width: 100%;
+                height: auto;
+                background-size: cover;
+                background-position: center;
         }
