--- a/templates/default.html
+++ b/templates/default.html
@@ -7,7 +7,7 @@
   <body>
  <nav class="navbar">
   <a href="index.html"
-    ><img src="static/site/Trigon.jpg" alt="SpaceMan" height="40" width="40"/ alt="Logo" class="logo"></a>
+    ><img src="static/site/Trigon.jpg" alt="SpaceMan" height="60px" width="60px" alt="Logo" class="logo"></a>
     </nav>
 
     <header class="header-image" role="img" aria-label="Wunder"></header>
