--- a/static/style.css
+++ b/static/style.css
@@ -16,8 +16,8 @@
         }
 
         .logo {
-            max-width: 100px;
-            height: auto;
+            max-width: 40px;
+            height: 40px;
         }
 
         .header-image {
