--- a/templates/default.html
+++ b/templates/default.html
@@ -17,10 +17,30 @@
             <h2>Sidebar</h2>
                   {{ template "nav.html" . }}
                   </aside>
+      <div class="main-content">
       <main class="main">
    {{ .Body }}
       </main>
+         <nav class="two-column-navbar" aria-label="Secondary Navigation">
+                <div class="navbar-column">
+    {{ if .Nav.Current }} {{ if lt ( len .Nav.Current ) 7 }}<ul>
+    {{ range $_, $element := .Nav.Current }}
+    <li><a href="{{ $element.Href }}">{{ $element.Name }}</a></li>
+    {{ end }} {{ end }}</ul>  
+    {{ end }}
 </div>
+           <div class="navbar-column">
+             <h3>Child</h3>
+    {{ if .Nav.Child }} {{ if lt ( len .Nav.Child ) 7 }}<ul>
+    {{ range $_, $element := .Nav.Child }}
+    <li><a href="{{ $element.Href }}">{{ $element.Name }}</a></li>
+    {{ end }} {{ end }}</ul>
+    {{ end }}
+           </div>
+         </nav>
+      </div>
+    </div>
+
 <footer class="footer">
         <p>Hello There!</p>
     </footer>
