--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@
         }
 
         .navbar {
-            background-color: #f8f9fa;
+            background-color: #000;
             padding: 1rem;
             display: flex;
             justify-content: center;
@@ -34,9 +34,10 @@
         }
 
         .sidebar {
-            background-color: #e9ecef;
+            background-color: #000;
             padding: 1rem;
             width: 250px;
+            color: #fff;
         }
 
         .sidebar ul {
@@ -65,8 +66,8 @@
         }
 
         .footer {
-            background-color: #343a40;
-            color: white;
+            background-color: #fff;
+            color: #000;
             text-align: center;
             padding: 1rem;
         }
@@ -76,10 +77,11 @@
            height: auto;
        }
 
-              .two-column-navbar {
+        .two-column-navbar {
             display: flex;
-            background-color: #e9ecef;
+            background-color: #000;
             padding: 1rem;
+            color: #fff;
         }
 
         .navbar-column {
