--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            color: #fff;
         }
 
         .navbar {
@@ -31,6 +32,7 @@
         .content {
             display: flex;
             flex: 1;
+            padding: 16px;
         }
 
         .sidebar {
@@ -62,7 +64,6 @@
 
         .main {
             flex: 1;
-            padding: 1rem;
         }
 
         .footer {
