--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,7 @@
             display: flex;
             flex: 1;
             padding: 16px;
+            width: 800px;
         }
 
         .sidebar {
@@ -72,6 +73,7 @@
             color: #000;
             text-align: center;
             padding: 1rem;
+            border: 1px solid white;
         }
 
        img {
