--- a/static/style.css
+++ b/static/style.css
@@ -24,7 +24,7 @@
         .header-image {
             width: 100%;
             height: 320px;
-            background-image: url('https://picsum.photos/1200/300');
+            background-image: url('https://static.wikia.nocookie.net/galaxystarsupermiraclenight/images/f/fb/Ramiel.png/');
             background-size: cover;
             background-position: center;
         }
@@ -33,13 +33,12 @@
             display: flex;
             flex: 1;
             padding: 16px;
-            width: 800px;
         }
 
         .sidebar {
             background-color: #000;
             padding: 1rem;
-            width: 250px;
+            width: 260px;
             color: #fff;
         }
 
@@ -66,6 +65,7 @@
         .main {
             flex: 1;
             padding: 1rem;
+            width: 800px;
         }
 
         .footer {
