--- a/static/style.css
+++ b/static/style.css
@@ -65,7 +65,7 @@
         .main {
             flex: 1;
             padding: 1rem;
-            width: 800px;
+            line-height: 1.244;
         }
 
         .footer {
