--- a/templates/default.html
+++ b/templates/default.html
@@ -14,6 +14,7 @@
 
     <div class="content">
         <aside class="sidebar">
+          <h2>{{ index .Meta "desc" }}</h2><hr>
                   {{ template "nav.html" . }}
                   </aside>
       <div class="main-content">
