--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,7 @@
             display: flex;
             flex: 1;
             padding: 16px;
+            width: 800px;
         }
 
         .sidebar {
@@ -121,6 +122,7 @@
         @media (max-width: 768px) {
             .content {
                 flex-direction: column;
+                width: 100%;
             }
 
             .sidebar {
