--- a/templates/head.html
+++ b/templates/head.html
@@ -2,9 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="It all returns to nothing!">
 <script type="text/javascript" src="static/files/lib/theme.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.cdnfonts.com/css/archivo" rel="stylesheet">
 <link rel="stylesheet" href="static/style.css" type="text/css" />
 <link rel="stylesheet" href="static/files/theme.css"/>
 
