--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@
             flex-direction: column;
             min-height: 100vh;
             color: #fff;
+            cursor: crosshair;
         }
 
         .navbar {
@@ -55,6 +56,7 @@
             color: #007bff;
             text-decoration: none;
             transition: color 0.3s ease;
+            cursor: cell;
         }
 
         .sidebar a:hover {
