--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,7 @@
         .logo {
             max-width: 40px;
             height: 40px;
+            cursor: cell;
         }
 
         .header-image {
@@ -46,6 +47,7 @@
         .sidebar ul {
             list-style-type: none;
             padding: 0;
+            width: 260px; 
         }
 
         .sidebar ul li {
@@ -67,7 +69,7 @@
         .main {
             flex: 1;
             padding: 1rem;
-            line-height: 1.244;
+            line-height: 1.344;
         }
 
         .footer {
