--- a/templates/default.html
+++ b/templates/default.html
@@ -10,7 +10,7 @@
     ><img src="static/site/Trigon.jpg" alt="SpaceMan" height="60px" width="60px" alt="Logo" class="logo"></a>
     </nav>
 
-    <header class="header-image" style="background-image: url('https://picsum.photos/1200/300');" role="img" aria-label="Wunder"></header>
+    <header class="header-image" style="background-image: url('{{ index .Meta "himg" }}');" role="img" aria-label="Wunder"></header>
 
     <div class="content">
         <aside class="sidebar">
