--- a/static/style.css
+++ b/static/style.css
@@ -36,6 +36,7 @@
             height: 300px;
             overflow: hidden;
             position: relative;
+            margin-bottom: 20px;
         }
 
         .cover-image {
