--- a/templates/head.html
+++ b/templates/head.html
@@ -1,9 +1,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="It all returns to nothing!">
-<script type="text/javascript" src="static/files/lib/theme.js"></script>
+<link rel="stylesheet" href="https://raw.githubusercontent.com/stardoom4/Velieva/refs/heads/main/v/style-002.css" type="text/css"/>
 <link href="https://fonts.cdnfonts.com/css/archivo" rel="stylesheet">
 <link rel="stylesheet" href="static/style.css" type="text/css" />
-<link rel="stylesheet" href="static/files/theme.css"/>
 
 
