--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,7 @@
             min-height: 100vh;
             color: #fff;
             cursor: crosshair;
+            background-color: #000;
         }
 
         .navbar {
