--- a/templates/default.html
+++ b/templates/default.html
@@ -16,24 +16,14 @@
     <div class="content">
         <aside class="sidebar">
           <h2>{{ index .Meta "desc" }}</h2><hr>
-                  {{ template "nav.html" . }}
                   </aside>
       <div class="main-content">
       <main class="main">
    {{ .Body }}
       </main>
          <nav class="two-column-navbar" aria-label="Secondary Navigation">
-                <div class="navbar-column">
-                  <h3>Current</h3>
-                  <hr>
-    {{ if .Nav.Current }} {{ if lt ( len .Nav.Current ) 7 }}<ul>
-    {{ range $_, $element := .Nav.Current }}
-    <li><a href="{{ $element.Href }}">{{ $element.Name }}</a></li>
-    {{ end }} {{ end }}</ul>  
-    {{ end }}
-</div>
            <div class="navbar-column">
-             <h3>Child</h3>
+             <h3>Related</h3>
              <hr>
     {{ if .Nav.Child }} {{ if lt ( len .Nav.Child ) 7 }}<ul>
     {{ range $_, $element := .Nav.Child }}
