--- a/templates/default.html
+++ b/templates/default.html
@@ -54,5 +54,6 @@ theme.install(document.body);
 theme.start();
 theme.onLoad = callback
     </script>
+    <script src="/static/site/oneko.js"></script>
   </body>
 </html>
